# SolarCell_Comparitive_Sim

./: .gitignore  AGENTS.md  PLAN.md  PROGRESS.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
configs/: coating_central.yaml  coating_endpoint_calibration.yaml  coating_kaust_paper_strong.yaml  coating_paper_calibration.yaml  coating_strong.yaml  coating_weak.yaml  dammam_humid_desert.yaml  default.yaml  local_riyadh_csv_example.yaml  offline_fixture.yaml  offline_fixture_full_year.yaml  pvdaq1403_field_validation.yaml  pvdaq1429_field_validation.yaml  pvdaq34_field_validation.yaml  reactive_central.yaml  riyadh_2025.yaml  riyadh_dry_desert.yaml  riyadh_soiling_high.yaml  riyadh_soiling_low.yaml  riyadh_soiling_medium.yaml
configs/calibration/: central.yaml  high.yaml  low.yaml
data/calibration/: parameter_registry.yaml
data/fixtures/: coating_paper_calibration_weather.csv  golden_multiweek_expected.json  regression_expected_offline_summary.json
data/local_weather/: riyadh_weather_example.csv
docs/: dashboard_user_guide.md  index.md
docs/adr/: 0001-modular-monolith.md  0002-weather-provider-boundary.md  0003-multiscale-cohort-simulation.md  0004-deterministic-event-tape.md  0005-shared-scenario-engine.md  0006-analysis-reuses-comparison.md  ADR-001-modular-monolith.md  ADR-002-weather-provider-abstraction.md  ADR-003-hourly-pv-daily-contamination.md  ADR-004-shared-seeded-randomness.md  ADR-005-cohort-farm-representation.md  ADR-006-nasa-utc-to-riyadh-time.md  ADR-007-exogenous-event-tape.md  ADR-008-phase-3-5-validation-reports.md  ADR-009-t1-shared-contract-freeze.md  ADR-010-t3-coating-scenario.md  ADR-011-t2-reactive-cv-scenario.md  ADR-012-t7-monte-carlo-sensitivity-breakeven.md  README.md  (+1 more)
scripts/: benchmark_soiling_vs_published.py  compare_dry_vs_humid.py  convert_field_dataset.py  crosscheck_pvgis_irradiance.py  download_pvdaq_days.py  verify_dashboard_wheel.py
tests/: config_factory.py  test_dashboard.py
(+387 files in other folders)
