[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solarclean-dt"
version = "0.1.0"
description = "SolarClean-DT Phase 1-3 digital-twin simulation foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pvlib>=0.10,<0.16",
    "pydantic>=2.7,<3",
    "PyYAML>=6,<7",
    "httpx>=0.27,<1",
    "matplotlib>=3.8,<4",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "jinja2>=3.1,<4",
    "timezonefinder>=8.2,<9",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<8",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
    "pandas-stubs>=2.2,<3",
    "types-PyYAML>=6,<7",
]

[project.scripts]
solarclean = "solarclean.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"solarclean.dashboard" = [
    "defaults/*.yaml",
    "templates/*.html",
    "static/*.css",
    "static/*.js",
    "static/fonts/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=pytest_tmp"
cache_dir = ".pytest_cache"
markers = [
    "integration: tests that may call external services",
]
filterwarnings = [
    "ignore:The 'generic' unit for NumPy timedelta is deprecated:DeprecationWarning:pvlib.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    ".agents",
    ".codex",
    ".git",
    ".venv*",
    ".pytest_cache",
    ".pytest_tmp",
    "pytest_tmp",
    "pytest-cache-files-*",
    "outputs",
    "data/cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["solarclean"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pvlib.*", "matplotlib.*"]
ignore_missing_imports = true
